--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/nav_gallery"
         android:name="com.example.bbs.ui.post.PostFragment"
         android:label="@string/menu_Post"
-        tools:layout="@layout/fragment_gallery" />
+        tools:layout="@layout/fragment_post" />
 
     <fragment
         android:id="@+id/nav_slideshow"
