--- a/app/src/main/res/layout/post_item_list.xml
+++ b/app/src/main/res/layout/post_item_list.xml
@@ -69,7 +69,7 @@
             android:layout_height="80dp"
             android:hint="帖子正文"
             android:textSize="18dp"
-            android:id="@+id/news_description"
+            android:id="@+id/post_content"
             android:inputType="textMultiLine">
         </TextView>
 
