--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -31,7 +31,7 @@
             android:orientation="vertical"
             android:layout_marginLeft="30dp"
             android:layout_height="wrap_content">
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/user_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
                 android:textStyle="bold"
                 tools:ignore="DuplicateIds" />
 
-            <com.google.android.material.textview.MaterialTextView
+            <TextView
                 android:id="@+id/user_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
