--- a/app/src/main/res/layout/post_detail.xml
+++ b/app/src/main/res/layout/post_detail.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingRight="10dp"
+    android:paddingLeft="10dp"
+    android:paddingBottom="10dp"
     android:orientation="vertical">
     <Button
         android:id="@+id/cancel"
         android:layout_width="200px"
-        android:layout_height="100px"
+        android:layout_height="120px"
         android:layout_gravity="left"
-        android:layout_marginTop="10dp"
         android:background="@drawable/round_button"
         android:text="返回"
         android:textSize="50px"
@@ -17,7 +21,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
         android:orientation="horizontal">
 
         <TextView
@@ -28,14 +31,14 @@
             android:gravity="center"
             android:text="文字标题"
             android:textStyle="bold"
-            android:textSize="40dp" />
+            android:textSize="25dp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -44,7 +47,7 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:text="作者："
-            android:gravity="right"
+            android:gravity="left"
             android:layout_weight="3"/>
 
     </LinearLayout>
@@ -52,7 +55,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <TextView
@@ -61,7 +64,23 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:text="发布时间："
-            android:gravity="right"
+            android:gravity="left"
+            android:layout_weight="3"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/recent_update_time"
+            android:textSize="20dp"
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+            android:text="最近更新时间："
+            android:gravity="left"
             android:layout_weight="3"/>
 
     </LinearLayout>
@@ -70,23 +89,60 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:paddingTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/post_content"
-            android:layout_width="0px"
-            android:layout_height="400dp"
-            android:layout_weight="3"
-            android:text="文字正文"
-            android:inputType="textMultiLine"
-            android:textSize="20dp" />
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="fill_parent"
+            android:layout_height="650px"
+            android:background="@android:drawable/edit_text"
+            android:scrollbarStyle="outsideOverlay">
+
+            <TextView
+                android:id="@+id/post_content"
+                android:layout_width="match_parent"
+                android:layout_height="700dp"
+                android:layout_weight="3"
+                android:inputType="textMultiLine"
+                android:text="文字正文"
+                android:textSize="20dp" />
+        </ScrollView>
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/show_comment"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_gravity="right"
+        tools:srcCompat="@drawable/comment_green" />
+
+    <EditText
+        android:id="@+id/comment_content"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@drawable/round_button"
+        android:ems="10"
+        android:hint="请输入你想说的话"
+        android:inputType="textPersonName"
+        android:textSize="20dp" />
+
+    <Button
+        android:id="@+id/comment"
+        android:layout_width="500px"
+        android:layout_height="120px"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/round_button"
+        android:text="我有话想说"
+        android:textSize="50px"
+        />
+
 
 
 
