--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -15,8 +15,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_weight="3"
+            android:layout_height="200dp"
             android:scaleType="center"
             app:srcCompat="@drawable/login" />
 
@@ -25,14 +24,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textSize="30dp"
+                android:textSize="25dp"
                 android:layout_marginLeft="55dp"
                 android:gravity="left"
                 android:text="用户名:" />
@@ -42,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:ems="10"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:gravity="left"
                 android:text="用 户 名" />
 
@@ -51,14 +50,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:textSize="30dp"
+                android:textSize="25dp"
                 android:layout_marginLeft="55dp"
                 android:gravity="left"
                 android:text="密    码:" />
@@ -68,8 +67,7 @@
                 android:id="@+id/user_password_show"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
-                android:ems="10"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:gravity="left"
                 android:text="用 户 密 码" />
 
@@ -78,7 +76,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <TextView
@@ -88,15 +86,14 @@
                 android:layout_weight="2"
                 android:gravity="left"
                 android:text="简    介:"
-                android:textSize="30dp" />
+                android:textSize="25dp" />
 
             <TextView
                 android:layout_width="0dp"
                 android:id="@+id/user_content_show"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
-                android:ems="10"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:gravity="left"
                 android:text="用 户 简 介" />
 
@@ -106,21 +103,42 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/Update"
                 android:layout_width="450px"
                 android:layout_height="120px"
                 android:layout_gravity="center"
-                android:layout_marginTop="-20dp"
+                android:layout_marginTop="20dp"
                 android:background="@drawable/round_button"
                 android:text="修改用户信息"
                 android:textSize="50px" />
+            <Button
+                android:id="@+id/my_post"
+                android:layout_width="450px"
+                android:layout_height="120px"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/round_button"
+                android:text="查看我的帖子"
+                android:textSize="50px" />
+
+            <Button
+                android:id="@+id/my_comment"
+                android:layout_width="450px"
+                android:layout_height="120px"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/round_button"
+                android:text="查看我的评论"
+                android:textSize="50px" />
+
 
         </LinearLayout>
+
 
     </LinearLayout>
 
