--- a/app/src/main/res/layout/my_post_detail.xml
+++ b/app/src/main/res/layout/my_post_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
     android:paddingRight="10dp"
     android:paddingLeft="10dp"
     android:paddingBottom="10dp"
@@ -34,27 +35,11 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/post_write"
-            android:textSize="20dp"
-            android:layout_width="10dp"
-            android:layout_height="wrap_content"
-            android:text="作者："
-            android:gravity="left"
-            android:layout_weight="3"/>
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -70,7 +55,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -88,8 +73,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:paddingTop="10dp"
+        android:layout_marginTop="10dp"
+
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
@@ -121,24 +106,14 @@
         android:layout_gravity="right"
         tools:srcCompat="@drawable/comment_green" />
 
-    <EditText
-        android:id="@+id/comment_content"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@drawable/round_button"
-        android:ems="10"
-        android:hint="请输入你想说的话"
-        android:inputType="textPersonName"
-        android:textSize="20dp" />
-
     <Button
-        android:id="@+id/comment"
+        android:id="@+id/update_myPost"
         android:layout_width="500px"
         android:layout_height="120px"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:background="@drawable/round_button"
-        android:text="我有话想说"
+        android:text="修改帖子内容"
         android:textSize="50px"
         />
 
