修改了一点小细节，将改用户信息和改用户密码分开进行，目前只写了界面

--- a/app/src/main/res/layout/my_post_detail.xml
+++ b/app/src/main/res/layout/my_post_detail.xml
@@ -13,6 +13,7 @@
         android:layout_width="200px"
         android:layout_height="120px"
         android:layout_gravity="left"
+        android:layout_marginTop="5dp"
         android:background="@drawable/round_button"
         android:text="返回"
         android:textSize="50px"
