--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -4,6 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="10dp"
+    android:paddingLeft="10dp"
+    android:paddingBottom="10dp"
+    android:paddingRight="10dp"
     tools:context=".ui.personal.PersonalFragment">
 
     <LinearLayout
@@ -15,7 +19,7 @@
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="190dp"
             android:scaleType="center"
             app:srcCompat="@drawable/login" />
 
@@ -32,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
                 android:textSize="25dp"
-                android:layout_marginLeft="55dp"
+                android:layout_marginLeft="35dp"
                 android:gravity="left"
                 android:text="用户名:" />
             <TextView
@@ -42,6 +46,7 @@
                 android:layout_weight="6"
                 android:ems="10"
                 android:textSize="20dp"
+                android:background="@drawable/round_button"
                 android:gravity="left"
                 android:text="用 户 名" />
 
@@ -49,40 +54,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:layout_marginTop="5dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="60dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:textSize="25dp"
-                android:layout_marginLeft="55dp"
-                android:gravity="left"
-                android:text="密    码:" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:id="@+id/user_password_show"
-                android:layout_height="wrap_content"
-                android:layout_weight="6"
-                android:textSize="20dp"
-                android:gravity="left"
-                android:text="用 户 密 码" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="55dp"
+                android:layout_marginLeft="35dp"
                 android:layout_weight="2"
                 android:gravity="left"
                 android:text="简    介:"
@@ -91,10 +70,12 @@
             <TextView
                 android:layout_width="0dp"
                 android:id="@+id/user_content_show"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_weight="6"
                 android:textSize="20dp"
                 android:gravity="left"
+                android:inputType="textMultiLine"
+                android:background="@drawable/round_button"
                 android:text="用 户 简 介" />
 
         </LinearLayout>
@@ -117,11 +98,20 @@
                 android:text="修改用户信息"
                 android:textSize="50px" />
             <Button
+                android:id="@+id/UpdatePassword"
+                android:layout_width="450px"
+                android:layout_height="120px"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/round_button"
+                android:text="修改账号密码"
+                android:textSize="50px" />
+            <Button
                 android:id="@+id/my_post"
                 android:layout_width="450px"
                 android:layout_height="120px"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/round_button"
                 android:text="查看我的帖子"
                 android:textSize="50px" />
@@ -131,7 +121,7 @@
                 android:layout_width="450px"
                 android:layout_height="120px"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/round_button"
                 android:text="查看我的评论"
                 android:textSize="50px" />
