--- a/app/src/main/res/layout/update_personal.xml
+++ b/app/src/main/res/layout/update_personal.xml
@@ -21,7 +21,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/update_user_icon"
             android:layout_width="match_parent"
             android:layout_height="130dp"
             android:layout_weight="3"
@@ -83,91 +83,14 @@
                 android:background="@drawable/round_button"
                 android:id="@+id/user_content_Update"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
+                android:inputType="textMultiLine"
                 android:layout_weight="6"
                 android:ems="10"
-                android:textSize="20dp"
-                android:inputType="textPersonName" />
+                android:textSize="20dp" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="20dp"
-                android:gravity="center"
-                android:text="新  密  码" />
-
-            <EditText
-                android:background="@drawable/round_button"
-                android:id="@+id/user_password_Update"
-                android:textSize="20dp"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ems="10"
-                android:inputType="textPassword" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="20dp"
-                android:gravity="center"
-                android:text="新  密  码" />
-
-            <EditText
-                android:background="@drawable/round_button"
-                android:id="@+id/user_password1_Update"
-                android:textSize="20dp"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ems="10"
-                android:inputType="textPassword" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="20dp"
-                android:gravity="center"
-                android:text="二次密码" />
-
-            <EditText
-                android:background="@drawable/round_button"
-                android:id="@+id/user_password2_Update"
-                android:textSize="20dp"
-                android:layout_width="0px"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ems="10"
-                android:inputType="textPassword" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="fill_parent"
