--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,11 @@
         android:name="com.example.bbs.ui.personal.PersonalFragment"
         android:label="@string/menu_Personal"
         tools:layout="@layout/fragment_personal" />
+
+    <fragment
+        android:id="@+id/nav_setting"
+        android:name="com.example.bbs.ui.setting.SettingFragment"
+        android:label="@string/menu_setting"
+        tools:layout="@layout/fragment_setting" />
+
 </navigation>
