增加了评论删除功能

--- a/app/src/main/res/layout/mycomment_item_list.xml
+++ b/app/src/main/res/layout/mycomment_item_list.xml
@@ -2,50 +2,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:descendantFocusability="blocksDescendants"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_weight="3"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/comment_content"
-            android:textColor="#000000"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:text="评论内容"
-            android:textSize="25sp"
+            android:layout_height="50dp"
             android:inputType="textMultiLine"
-            android:textStyle="bold"/>
-
-        <LinearLayout
-            android:layout_width="250dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="right"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.75"
-                android:text="发布时间："
-                android:textSize="20dp" />
-            <TextView
-                android:id="@+id/comment_createTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:text="XXXX:XX:XX"
-                android:textSize="15dp" />
+            android:text="评论内容"
+            android:textColor="#000000"
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
 
-        </LinearLayout>
 
     </LinearLayout>
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+
+        android:layout_marginTop="5dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+
+            android:text="发布时间："
+            android:textSize="22dp" />
+
+        <TextView
+            android:id="@+id/comment_createTime"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:text="XXXX:XX:XX"
+            android:textSize="17dp" />
+
+        <Button
+            android:id="@+id/delete_my_comment"
+            android:layout_width="200px"
+            android:layout_height="120px"
+            android:text="删除"
+            />
+
+    </LinearLayout>
+
 </LinearLayout>
+
 
