--- a/app/src/main/res/layout/my_post_item_list.xml
+++ b/app/src/main/res/layout/my_post_item_list.xml
@@ -10,15 +10,26 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/post_title"
-            android:textColor="#000000"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="帖子标题"
-            android:textSize="25sp"
-            android:textStyle="bold"/>
+            android:layout_marginTop="5dp">
 
+            <TextView
+                android:id="@+id/post_title"
+                android:textColor="#000000"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:text="帖子标题"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
+            <Button
+                android:id="@+id/delete_my_post"
+                android:layout_width="200px"
+                android:layout_height="120px"
+                android:text="删除"
+                />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="300dp"
             android:layout_height="25dp"
